"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2008-10-20	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-43+:
	  By popular demand, hacprsim: channel-source on empty args
		or empty file is now downgraded from error to warning.
		No tests were affected, not bothering to add a test for this.


	* HACKT-00-01-04-main-00-82-43:
	  parser: allow attributes on member references
	  minor bug fixes:
		bool_connection_policy: implement connection_flag_setter
		port_alias_tracker: print attributes of port aliases
	  Test cases added.
	  New known bug: attributes not properly propagated hierarchically,
		will be fixed next.


2008-10-15	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-42+:
	  Aded hflat option to split instance/node attributes to one-per-line
		instead of grouping all of them on one line before.
	  Documented and tested.


2008-10-11	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-42:
	  hflat prsim: print pass-gate sizes if sizes requested.
		Suppress pass-gate expansion if options dictate it.  
		Added test cases.


	* HACKT-00-01-04-main-00-82-41:
	  hflat now prints node attributes with new flag 
		-fnode-attributes (default false), 
		which is folded into the 'java-lvs' preset (main/cflat.cc).
		Use "hflat java-lvs" for convenience. 
	  cflat_prs_printer now calls print attributes on nodes, 
		node name quotation honors flag.  
	  Bug fix: instance_attribute::unroll now operates on the
		*canonical* node referenced by an alias.  
	  Documented new hflat option, bunch of test cases added.
	  This concludes the initial implementation of node attributes
		for hflat.  


2008-10-10	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-40:
	  iscomb, autokeeper node attributes arguments now optional, 
		default unspecified values to 1.