@@ -1,0 +1,23 @@
+# "channel-test-a-33.prsimrc"
+# @haco@ channel-test-a.haco-a
+
+# testing hexadecimal values
+source channel-test-a-01.prsimrc
+echo no values given: will reset to neutral
+channel-source-args Y
+channel-show-all
+channel-sink Y
+
+channel-watch Y
+
+echo resetting all channels...
+channel-reset-all
+watchall
+cycle
+
+echo releasing all channels...
+channel-release-all
+cycle
+
+assertn-queue
+
